--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 15%">
         <h5>surprise and delight the senses</h5>
-        <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Master Chef Jimbo Echevarría to thrill and captivate.</p>
+        <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Peruvian Master Chef Jim Daniel Echevarría to thrill and captivate.</p>
          <p class="u-pull-left" >open everyday: 6 p.m. to 10 p.m.<br>no reservations<br>cash only<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a>
 		 </p>
@@ -108,22 +108,43 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Photos from our lovely customers!</p>
+        <p class="u-pull-left">Best sushi I have ever had <br>outside Japan</p>
+        <a target="_blank" class="button" style="float: right" 
+			href="https://www.instagram.com/p/BQrO-NEBytV/">zakion_a.k.a._saki</a>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Sushi sin pescado <br>sorprendente restaurante en Perú</p>
+        <a target="_blank" class="button" style="float: right" 
+			href="http://www.ryuhikai.com/sushi-sin-pescado-buda-profano/">RyûHiKai blog</a>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">A vegan oasis in Arequipa</p>
+        <a target="_blank" class="button" style="float: right" 
+			href="http://theveganglobetrotter.com/en/vegan-oasis-arequipa-el-buda-profano/">The Vegan Globetrotter</a>
+      </div>
+    </div>
+
+  <!-- Mentions 2nd row -->
+    <div class="row">
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">8 Best Restaurants In Arequipa</p>
+        <a target="_blank" class="button" style="float: right" 
+			href="http://notsobudgetbackpacker.com/the-8-best-restaurants-in-arequipa/">NOT SO budget backpacker</a>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">more Photos from our lovely customers!</p>
         <a target="_blank" class="button" style="float: right" 
 			href="https://www.instagram.com/explore/locations/1024032139/">Instagrams</a>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">A vegan oasis in Arequipa: El Buda Profano</p>
+        <p class="u-pull-left">Vegan eten in Arequipa</p>
         <a target="_blank" class="button" style="float: right" 
-			href="http://theveganglobetrotter.com/en/vegan-oasis-arequipa-el-buda-profano/">The Vegan Globetrotter</a>
-      </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">¿Sushi sin pescado? La opción de Sushi Vegano, la tiene ElBudaProfano, 
-								un restaurante muy innovador en Arequipa Perú</p>
-        <a target="_blank" class="button" style="float: right" 
-			href="http://www.ryuhikai.com/sushi-sin-pescado-buda-profano/">RyûHiKai blog</a>
+			href="http://www.quirines.nl/world/peru-arequipa-in-fotos/">Quirines</a>
       </div>
     </div>
 
@@ -147,13 +168,13 @@
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Jerenie <br></p>
         <p class="u-pull-right"><br>personnel picker extraordinaire  
-								<br><br> hr </p>
+								<br><br>  </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">  </p>
-        <p class="u-pull-right"> We are hiring!
-								<br><br> Chef, team lead </p>
+        <p class="u-pull-left">Jaime   </p>
+        <p class="u-pull-right"> 
+								<br><br> team lead </p>
       </div>
     </div>
 
@@ -161,19 +182,19 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Alex </p>
-        <p class="u-pull-right">aka '9 finger' 
+        <p class="u-pull-left">Cristian  </p>
+        <p class="u-pull-right"> 
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">You! </p>
+        <p class="u-pull-left">Nico </p>
         <p class="u-pull-right">  
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Claudia  </p>
+        <p class="u-pull-left">Cristian  </p>
         <p class="u-pull-right">  
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
