--- a/work.html
+++ b/work.html
@@ -80,6 +80,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
         <h4>the Team</h4>
+		<a class="button" style="float: right" href="mailto:buda.profano@gmail.com">Join us!</a>
       </div>
     </div>
 
@@ -95,13 +96,13 @@
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Jerenie <br></p>
         <p class="u-pull-right"><br>personnel picker extraordinaire  
-								<br><br> hr </p>
+								<br><br>  </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">  </p>
-        <p class="u-pull-right"> We are hiring!
-								<br><br> Chef, team lead </p>
+        <p class="u-pull-left">Jaime   </p>
+        <p class="u-pull-right"> 
+								<br><br> team lead </p>
       </div>
     </div>
 
@@ -109,24 +110,23 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Alex </p>
-        <p class="u-pull-right">aka '9 finger' 
+        <p class="u-pull-left">Cristian  </p>
+        <p class="u-pull-right"> 
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">You! </p>
+        <p class="u-pull-left">Nico </p>
         <p class="u-pull-right">  
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Claudia  </p>
+        <p class="u-pull-left">Cristian  </p>
         <p class="u-pull-right">  
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
     </div>
-
 
 
   <!-- Footer row -->
