--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <div class="one-half column" style="margin-top: 15%">
         <h5>surprise and delight the senses</h5>
         <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Peruvian Master Chef Jim Daniel Echevarría to thrill and captivate.</p>
-         <p class="u-pull-left" >open everyday: 6 p.m. to 10 p.m.<br>no reservations<br>cash only<br><br>  
+         <p class="u-pull-left" >open everyday<br>&nbsp;&nbsp;&nbsp;lunch: 12 noon to 3:30 pm<br>&nbsp;&nbsp;&nbsp;dinner: 6 p.m. to 9 p.m.<br>no reservations<br>cash only<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a>
 		 </p>
-      	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br>
+      	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br><br><br>
 			<a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a>
 		</p>
       </div>
@@ -188,13 +188,13 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Nico </p>
+        <p class="u-pull-left">Luis </p>
         <p class="u-pull-right">  
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Cristian  </p>
+        <p class="u-pull-left">Renzo  </p>
         <p class="u-pull-right">  
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
