--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 15%">
-        <h5>surprise and delight the senses</h5>
-        <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Peruvian Master Chef Jim Daniel Echevarría to thrill and captivate.</p>
+        <h5>'cause no one else will</h5>
+
+
+        <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Peruvian Master Chef Jim Daniel Echevarría to surprise and delight the senses.</p>
          <p class="u-pull-left" >open everyday<br>&nbsp;&nbsp;&nbsp;lunch: 12 noon to 3:30 pm<br>&nbsp;&nbsp;&nbsp;dinner: 6 p.m. to 9 p.m.<br>no reservations<br>cash only<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a>
 		 </p>
@@ -108,16 +110,17 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Un ramillete de nuevos restaurantes de cocinas del mundo abren en Arequipa.</p>
+        <a target="_blank" class="button" style="float: right" 
+			href="http://caretas.pe/cucharon_contento/79461-el_buda_profano">Maria Elena Cornejo</a>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Best sushi I have ever had <br>outside Japan</p>
         <a target="_blank" class="button" style="float: right" 
 			href="https://www.instagram.com/p/BQrO-NEBytV/">zakion_a.k.a._saki</a>
       </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Sushi sin pescado <br>sorprendente restaurante en Perú</p>
-        <a target="_blank" class="button" style="float: right" 
-			href="http://www.ryuhikai.com/sushi-sin-pescado-buda-profano/">RyûHiKai blog</a>
-      </div>
+
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">A vegan oasis in Arequipa</p>
@@ -136,9 +139,9 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">more Photos from our lovely customers!</p>
+        <p class="u-pull-left">Sushi sin pescado <br>sorprendente restaurante en Perú</p>
         <a target="_blank" class="button" style="float: right" 
-			href="https://www.instagram.com/explore/locations/1024032139/">Instagrams</a>
+			href="http://www.ryuhikai.com/sushi-sin-pescado-buda-profano/">RyûHiKai blog</a>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
