--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 15%">
-        <h5>'cause no one else will</h5>
+        <h5>orgasmic</h5>
 
 
         <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Peruvian Master Chef Jim Daniel Echevarría to surprise and delight the senses.</p>
@@ -163,6 +163,12 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">   </p>
+        <p class="u-pull-right"> 
+								<br><br> itamae, team lead </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Alan </p>
         <p class="u-pull-right">conceptualizer, architect, dishwasher
 								<br><br>... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!</p>
@@ -173,33 +179,49 @@
         <p class="u-pull-right"><br>personnel picker extraordinaire  
 								<br><br>  </p>
       </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Jaime   </p>
-        <p class="u-pull-right"> 
-								<br><br> team lead </p>
-      </div>
     </div>
 
   <!-- Team 2nd row -->
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Cristian  </p>
+        <p class="u-pull-left">Ana  </p>
         <p class="u-pull-right"> 
-								<br><br> Line cook, Prep cook, Waiter </p>
+								<br><br> kitchen </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Elvis </p>
+        <p class="u-pull-right">  
+								<br><br> kitchen </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Jennifer  </p>
+        <p class="u-pull-right">  
+								<br><br> kitchen </p>
+      </div>
+    </div>
+
+  <!-- Team 3rd row -->
+    <div class="row">
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Luciano  </p>
+        <p class="u-pull-right"> 
+								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Luis </p>
         <p class="u-pull-right">  
-								<br><br> Line cook, Prep cook, Waiter </p>
+								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Renzo  </p>
+        <p class="u-pull-left">Ximena  </p>
         <p class="u-pull-right">  
-								<br><br> Line cook, Prep cook, Waiter </p>
+								<br><br> kitchen </p>
       </div>
     </div>
 
