--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
         <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Peruvian Master Chef Jim Daniel Echevarría to surprise and delight the senses.</p>
-         <p class="u-pull-left" >open everyday<br>&nbsp;&nbsp;&nbsp;lunch: 12 noon to 3:30 pm<br>&nbsp;&nbsp;&nbsp;dinner: 6 p.m. to 9 p.m.<br>no reservations<br>cash only<br><br>  
+         <p class="u-pull-left" >open everyday<br>&nbsp;&nbsp;&nbsp;4 p.m. to 9 p.m.<br>no reservations<br>cash only<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a>
 		 </p>
       	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br><br><br>
@@ -191,7 +191,7 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Elvis </p>
+        <p class="u-pull-left">Andy </p>
         <p class="u-pull-right">  
 								<br><br> kitchen </p>
       </div>
@@ -207,19 +207,19 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Luciano  </p>
+        <p class="u-pull-left">Luis  </p>
         <p class="u-pull-right"> 
 								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Luis </p>
+        <p class="u-pull-left">Irwin </p>
         <p class="u-pull-right">  
 								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Ximena  </p>
+        <p class="u-pull-left">Jaime  </p>
         <p class="u-pull-right">  
 								<br><br> kitchen </p>
       </div>
