--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Tasting menu for 2 | S/38</p>
-        <p class="u-pull-right">Miso, nigirizushi, gunkanmaki, hosomaki, futomaki and uramaki</p>
+        <p class="u-pull-left">Tasting menu for 2 | S/40</p>
+        <p class="u-pull-right">sunomono salad, gyoza, 15 pieces makizushi, miso</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">10 piece gunkanmaki | S/18</p>
-        <p class="u-pull-right">a fine selection of gunkanmaki</p>
+        <p class="u-pull-left">5 piece gunkanmaki | S/10</p>
+        <p class="u-pull-right">our fine selection of gunkanmaki</p>
       </div>
     </div>
 
@@ -88,13 +88,13 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Wine by the bottle | S/55</p>
+        <p class="u-pull-left">Wine by the bottle | S/50</p>
         <p class="u-pull-right">White, red or sparkling</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Fresh combo | S/16</p>
-        <p class="u-pull-right">Fresh juice, Sunomono salad and Futomaki</p>
+        <p class="u-pull-left">Ramen and beer | S/14</p>
+        <p class="u-pull-right">Ramen soup paired with a cold Pilsen</p>
       </div>
     </div>
 
@@ -163,7 +163,7 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">   </p>
+        <p class="u-pull-left">Hiring   </p>
         <p class="u-pull-right"> 
 								<br><br> itamae, team lead </p>
       </div>
@@ -191,7 +191,7 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Andy </p>
+        <p class="u-pull-left">Oswaldo </p>
         <p class="u-pull-right">  
 								<br><br> kitchen </p>
       </div>
@@ -219,7 +219,7 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Jaime  </p>
+        <p class="u-pull-left">Antoni  </p>
         <p class="u-pull-right">  
 								<br><br> kitchen </p>
       </div>
