--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>el buda profano | vegan sushi | Arequipa Peru</title>
-  <meta name="description" content="Unique and Innovative Vegan Cuisine">
+  <meta name="description" content="A restaurant featuring Japanese Vegan Cuisine">
   <meta name="author" content="el buda profano">
 
-  <meta name="keywords" content="vegan,cuisine,sushi,restaurant,sake,wine,bar,arequipa,peru">
+  <meta name="keywords" content="vegan,plantbased,vegetarian,cuisine,sushi,nikkei,restaurant,sake,wine,bar,arequipa,peru">
 
   <link rel="canonical" href="http://elbudaprofano.com" />
 
@@ -39,10 +39,10 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 15%">
-        <h5>orgasmic</h5>
+        <h5>surprise and delight your senses</h5>
 
 
-        <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Peruvian Master Chef Jim Daniel Echevarría to surprise and delight the senses.</p>
+        <p>Welcome. Our restaurant features signature vegan sushi designed by Peruvian Master Chef Jim Daniel Echevarría. Our Japanese cuisine with a nikkei touch is enjoyed by vegans, vegetarians, pescetarians and carnivores alike. You won't find anything else like it!</p>
          <p class="u-pull-left" >open everyday<br>&nbsp;&nbsp;&nbsp;4 p.m. to 9 p.m.<br>no reservations<br>cash only<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a>
 		 </p>
