--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Chef Selection | S/35</p>
-        <p class="u-pull-right">24 piece sushi platter</p>
+        <p class="u-pull-left">Combo for 1 | S/22</p>
+        <p class="u-pull-right">14 piece sushi platter with miso</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Tasting menu for 2 | S/40</p>
-        <p class="u-pull-right">sunomono salad, gyoza, 15 pieces makizushi, miso</p>
+        <p class="u-pull-left">Tasting menu for 2 | S/50</p>
+        <p class="u-pull-right">sunomono salad, gyoza, 19 pieces makizushi, miso</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">5 piece gunkanmaki | S/10</p>
+        <p class="u-pull-left">6 piece gunkanmaki | S/12</p>
         <p class="u-pull-right">our fine selection of gunkanmaki</p>
       </div>
     </div>
@@ -83,18 +83,18 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Sweet afternoon | S/28</p>
-        <p class="u-pull-right">Saké and your choice of our desert makis</p>
+        <p class="u-pull-left">Sweet afternoon | S/20</p>
+        <p class="u-pull-right">Saké and mochi to share</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Wine by the bottle | S/50</p>
+        <p class="u-pull-left">Wine by the bottle | S/60</p>
         <p class="u-pull-right">White, red or sparkling</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Ramen and beer | S/14</p>
-        <p class="u-pull-right">Ramen soup paired with a cold Pilsen</p>
+        <p class="u-pull-left">cebiche and beer | S/15</p>
+        <p class="u-pull-right">highland cebiche paired with a cold Pilsen</p>
       </div>
     </div>
 
@@ -165,7 +165,7 @@
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Hiring   </p>
         <p class="u-pull-right"> 
-								<br><br> itamae, team lead </p>
+								<br><br> itamae, chef </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
@@ -185,7 +185,7 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Ana  </p>
+        <p class="u-pull-left">Jaime  </p>
         <p class="u-pull-right"> 
 								<br><br> kitchen </p>
       </div>
