--- a/en/index.html
+++ b/en/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>el buda profano | sushi vegano | Arequipa Perú</title>
-  <meta name="description" content="Restaurante de Comida Japonesa Vegana ">
+  <title>el buda profano | vegan sushi | Arequipa Peru</title>
+  <meta name="description" content="A restaurant featuring Japanese Vegan Cuisine">
   <meta name="author" content="el buda profano">
 
-  <meta name="keywords" content="vegano,plantbased,vegetariano,gastronomia,sushi,nikkei,restaurante,sake,wine,bar,arequipa,peru">
+  <meta name="keywords" content="vegan,plantbased,vegetarian,cuisine,sushi,nikkei,restaurant,sake,wine,bar,arequipa,peru">
 
   <link rel="canonical" href="http://elbudaprofano.com" />
 
@@ -39,15 +39,15 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 15%">
-        <h5>sorprender y deleitar los sentidos</h5>
+        <h5>surprise and delight your senses</h5>
 
 
-        <p>Presentando sushi de autor por Master Chef Perú Jim Daniel Echevarría. Nuestro comida Japonesa vegana con su toque Nikkei es disfrutado por veganos, vegetarianos, pescetarianos, flexitarianos y carnívoros igual. No encontrarás nada igual.</p>
-         <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 P.M. a 9 P.M.<br>no reservaciones<br>solo efectivo<br><br>  
-			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">opiniones desde tripadvisor</a>
+        <p>Welcome. Our restaurant features signature vegan sushi designed by Peruvian Master Chef Jim Daniel Echevarría. Our Japanese cuisine with a nikkei touch is enjoyed by vegans, vegetarians, pescetarians and carnivores alike. You won't find anything else like it!</p>
+         <p class="u-pull-left" >open everyday<br>&nbsp;&nbsp;&nbsp;12 noon to 9 p.m.<br>no reservations<br>cash only<br><br>  
+			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a>
 		 </p>
-      	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Perú<br><br><br><br>
-			<a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">ubicación en la mapa</a>
+      	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br><br><br>
+			<a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a>
 		</p>
       </div>
     </div>
@@ -55,8 +55,8 @@
   <!-- sample dishes row -->
     <div class="row">
       <div class="six columns" style="margin-top: 25%">
-        <h5>combos y tablas</h5>
-        <p class="u-pull-right">precios en Soles<br>La carta 100% vegana <a target="_blank" href="images/carta-1.jpg"> esta aqui</a>.</p>
+        <h5>combos and platters</h5>
+        <p class="u-pull-right">prices in Peruvian Soles<br>Our 100% vegan menu <a target="_blank" href="images/menu-1.jpg">is here</a>.</p>
       </div>
     </div>
 
@@ -64,18 +64,18 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Variado para 1 | S/22</p>
-        <p class="u-pull-right">tabla de 14 piezas sushi con miso</p>
+        <p class="u-pull-left">Combo for 1 | S/22</p>
+        <p class="u-pull-right">14 piece sushi platter with miso</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Degustacíon para 2 personas | S/50</p>
-        <p class="u-pull-right">ensalada sunomono, gyoza, 19 piezas sushi, miso</p>
+        <p class="u-pull-left">Tasting menu for 2 | S/50</p>
+        <p class="u-pull-right">sunomono salad, gyoza, 19 pieces makizushi, miso</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">6 piezas gunkanmaki | S/12</p>
-        <p class="u-pull-right">una fina selecion de gunkanmakis</p>
+        <p class="u-pull-left">6 piece gunkanmaki | S/12</p>
+        <p class="u-pull-right">our fine selection of gunkanmaki</p>
       </div>
     </div>
 
@@ -83,18 +83,18 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Sweet afternoon | S/22</p>
-        <p class="u-pull-right">Saké and maki dulce para compartir</p>
+        <p class="u-pull-left">Sweet afternoon | S/20</p>
+        <p class="u-pull-right">Saké and mochi to share</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Vino por la botella | S/60</p>
-        <p class="u-pull-right">Blanco, tinto o espumante</p>
+        <p class="u-pull-left">Wine by the bottle | S/60</p>
+        <p class="u-pull-right">White, red or sparkling</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">el ceviche con su chela | S/15</p>
-        <p class="u-pull-right">cebiche vegano y una Pilsen bien fria</p>
+        <p class="u-pull-left">cebiche and beer | S/15</p>
+        <p class="u-pull-right">highland cebiche paired with a cold Pilsen</p>
       </div>
     </div>
 
@@ -102,7 +102,7 @@
   <!-- Mentions header row -->
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
-        <h4>Fama</h4>
+        <h4>Fame and fortune</h4>
       </div>
     </div>
 
@@ -123,9 +123,9 @@
 
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Oasis vegano en Arequipa</p>
+        <p class="u-pull-left">A vegan oasis in Arequipa</p>
         <a target="_blank" class="button" style="float: right" 
-			href="http://theveganglobetrotter.com/un-oasis-vegano-en-arequipa-el-buda-profano/">The Vegan Globetrotter</a>
+			href="http://theveganglobetrotter.com/en/vegan-oasis-arequipa-el-buda-profano/">The Vegan Globetrotter</a>
       </div>
     </div>
 
@@ -154,8 +154,8 @@
   <!-- Team header row -->
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
-        <h4>el equipo</h4>
-		<a class="button" style="float: right" href="mailto:buda.profano@gmail.com">¡Únete!</a>
+        <h4>the Team</h4>
+		<a class="button" style="float: right" href="mailto:buda.profano@gmail.com">Join us!</a>
       </div>
     </div>
 
@@ -163,20 +163,20 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">abierta   </p>
+        <p class="u-pull-left">Hiring   </p>
         <p class="u-pull-right"> 
 								<br><br> itamae, chef </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Alan </p>
-        <p class="u-pull-right">conceptualizador, arquitecto
+        <p class="u-pull-right">conceptualizer, architect, dishwasher
 								<br><br>... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Jerenie <br></p>
-        <p class="u-pull-right"><br>RR.HH.  
+        <p class="u-pull-right"><br>personnel picker extraordinaire  
 								<br><br>  </p>
       </div>
     </div>
@@ -187,19 +187,19 @@
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Jaime  </p>
         <p class="u-pull-right"> 
-								<br><br> cocina </p>
+								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Oswaldo </p>
         <p class="u-pull-right">  
-								<br><br> cocina </p>
+								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Jennifer  </p>
         <p class="u-pull-right">  
-								<br><br> cocina </p>
+								<br><br> kitchen </p>
       </div>
     </div>
 
@@ -209,19 +209,19 @@
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Luis  </p>
         <p class="u-pull-right"> 
-								<br><br> cocina </p>
+								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Irwin </p>
         <p class="u-pull-right">  
-								<br><br> cocina </p>
+								<br><br> kitchen </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Antoni  </p>
         <p class="u-pull-right">  
-								<br><br> cocina </p>
+								<br><br> kitchen </p>
       </div>
     </div>
 
