--- a/es/index.html
+++ b/es/index.html
@@ -39,11 +39,11 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 15%">
-        <h5>sorprender y deleitar los sentidos</h5>
+        <h5>Sorprender y deleitar los sentidos</h5>
 
 
         <p>Presentando sushi de autor por Master Chef Perú Jim Daniel Echevarría. Nuestro comida Japonesa vegana con su toque Nikkei es disfrutado por veganos, vegetarianos, pescetarianos, flexitarianos y carnívoros igual. No encontrarás nada igual.</p>
-         <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 P.M. a 9 P.M.<br>no reservaciones<br>solo efectivo<br><br>  
+         <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 P.M. a 9 P.M.<br>no reservations<br>solo efectivo<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">opiniones desde tripadvisor</a>
 		 </p>
       	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Perú<br><br><br><br>
@@ -56,7 +56,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 25%">
         <h5>combos y tablas</h5>
-        <p class="u-pull-right">precios en Soles<br>La carta 100% vegana <a target="_blank" href="images/carta-1.jpg"> esta aqui</a>.</p>
+        <p class="u-pull-right">precios en Soles<br>La carta 100% vegana<a target="_blank" href="images/menu-1.jpg">esta aqui</a>.</p>
       </div>
     </div>
 
@@ -88,7 +88,7 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Vino por la botella | S/60</p>
+        <p class="u-pull-left">Wine por botella | S/60</p>
         <p class="u-pull-right">Blanco, tinto o espumante</p>
       </div>
   <!-- -->
@@ -125,7 +125,7 @@
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Oasis vegano en Arequipa</p>
         <a target="_blank" class="button" style="float: right" 
-			href="http://theveganglobetrotter.com/un-oasis-vegano-en-arequipa-el-buda-profano/">The Vegan Globetrotter</a>
+			href="http://theveganglobetrotter.com/es/vegan-oasis-arequipa-el-buda-profano/">The Vegan Globetrotter</a>
       </div>
     </div>
 
@@ -155,7 +155,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
         <h4>el equipo</h4>
-		<a class="button" style="float: right" href="mailto:buda.profano@gmail.com">¡Únete!</a>
+		<a class="button" style="float: right" href="mailto:buda.profano@gmail.com">Join us!</a>
       </div>
     </div>
 
@@ -163,20 +163,20 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">abierta   </p>
+        <p class="u-pull-left">Hiring   </p>
         <p class="u-pull-right"> 
 								<br><br> itamae, chef </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Alan </p>
-        <p class="u-pull-right">conceptualizador, arquitecto
+        <p class="u-pull-right">conceptualizer, architect, dishwasher
 								<br><br>... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Jerenie <br></p>
-        <p class="u-pull-right"><br>RR.HH.  
+        <p class="u-pull-right"><br>personnel picker extraordinaire  
 								<br><br>  </p>
       </div>
     </div>
