--- a/en/index.html
+++ b/en/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="A restaurant featuring Japanese Vegan Cuisine">
   <meta name="author" content="el buda profano">
 
-  <meta name="keywords" content="vegan,plantbased,vegetarian,cuisine,sushi,nikkei,restaurant,sake,wine,bar,arequipa,peru">
+  <meta name="keywords" content="vegan,plantbased,vegetarian,cuisine,sushi,restaurant,sake,wine,bar,arequipa,peru">
 
   <link rel="canonical" href="http://elbudaprofano.com" />
 
@@ -42,7 +42,7 @@
         <h5>surprise and delight your senses</h5>
 
 
-        <p>Welcome. Our restaurant features signature vegan sushi designed by Peruvian Master Chef Jim Daniel Echevarría. Our Japanese cuisine with a nikkei touch is enjoyed by vegans, vegetarians, pescetarians and carnivores alike. You won't find anything else like it!</p>
+        <p>Welcome. Our restaurant features vegan sushi designed by Peruvian Master Chef Jim Daniel Echevarría. Enjoyed by vegans, vegetarians, pescetarians and carnivores alike. You won't find anything else like it!</p>
          <p class="u-pull-left" >open everyday<br>&nbsp;&nbsp;&nbsp;12 noon to 9 p.m.<br>no reservations<br>cash only<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a>
 		 </p>
