--- a/es/index.html
+++ b/es/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Restaurante de Comida Japonesa Vegana ">
   <meta name="author" content="el buda profano">
 
-  <meta name="keywords" content="vegano,plantbased,vegetariano,gastronomia,sushi,nikkei,restaurante,sake,wine,bar,arequipa,peru">
+  <meta name="keywords" content="vegano,plantbased,vegetariano,gastronomia,sushi,restaurante,sake,wine,bar,arequipa,peru">
 
   <link rel="canonical" href="http://elbudaprofano.com" />
 
@@ -42,7 +42,7 @@
         <h5>Sorprender y deleitar los sentidos</h5>
 
 
-        <p>Presentando sushi de autor por Master Chef Perú Jim Daniel Echevarría. Nuestro comida Japonesa vegana con su toque Nikkei es disfrutado por veganos, vegetarianos, pescetarianos, flexitarianos y carnívoros igual. No encontrarás nada igual.</p>
+        <p>Presentando sushi vegano por Master Chef Perú Jim Daniel Echevarría. Disfrutado por veganos, vegetarianos, pescetarianos, flexitarianos y carnívoros igual. No encontrarás nada igual.</p>
          <p class="u-pull-left" >abierto todos los días<br>&nbsp;&nbsp;&nbsp;12 P.M. a 9 P.M.<br>no reservations<br>solo efectivo<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">opiniones desde tripadvisor</a>
 		 </p>
